card view overflow fix

--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@ body{
 }
 
 *{
-  font-family: 'Nanum Square'; 
+  font-family: 'Nanum Square';
 }
 /* PART 1*/
 
@@ -169,7 +169,7 @@ padding-bottom: 2.5rem;
     flex-direction: row;;
     flex-basis: 15rem;
     flex-shrink: 2;
-    overflow-x: auto;
+    overflow-x: hidden;
     width:25rem;
 }
 .unit > .unit_box > .unit_card img {
